<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cdickie2309.prog3210_final.LoginActivity"
    android:background="@color/colorBackgroundB">

    <TextView
        android:id="@+id/lblLogin"
        style="@style/CenteredLblHeader"
        android:text="@string/lblLoginHeader" />

    <LinearLayout
        android:id="@+id/centeredLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLogin"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <!-- Email input -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblEmail"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtEmail"
                android:text="@string/lblEmail" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblEmail"
                android:inputType="textEmailAddress" />
        </RelativeLayout>

        <!-- Password Input -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblPassword"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtPassword"
                android:text="@string/lblPassword" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblPassword"
                android:inputType="textPassword" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lblErrorMessage"
        style="@style/ErrorUnderInput"
        android:layout_below="@+id/centeredLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/lblForgotPassword"
        style="@style/DullText"
        android:layout_below="@+id/lblErrorMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lblForgotPassword" />

    <TextView
        android:id="@+id/lblCreateAccount"
        style="@style/DullText"
        android:layout_below="@+id/lblForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lblCreateAccount" />

    <TextView
        android:id="@+id/lblContactUs"
        style="@style/DullText"
        android:layout_below="@+id/lblCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lblContactUs" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/CenteredButton"
        android:layout_below="@+id/lblContactUs"
        android:layout_marginTop="20dp"
        android:text="@string/btnLogin" />

</RelativeLayout>
