<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cdickie2309.prog3210_final.CreateConversationActivity">

    <TextView
        android:id="@+id/lblCreateConversationHeader"
        style="@style/CenteredLblHeader"
        android:text="@string/lblCreateConversationHeader"
        android:textSize="30sp"
        android:textColor="@color/colorTextA"/>

    <TextView
        android:id="@+id/lblCreateConversationSubHeader"
        style="@style/CenteredLbl"
        android:text="@string/lblCreateConversationSubHeader"
        android:layout_below="@+id/lblCreateConversationHeader"
        android:textColor="@color/colorTextA"/>

    <ListView
        android:id="@+id/lstUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCreateConversationSubHeader"/>

    <Button
        android:id="@+id/btnAddUsers"
        android:text="@string/btnCreateConversation"
        android:layout_alignParentBottom="true"
        style="@style/CenteredButton" />
</RelativeLayout>
