<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cdickie2309.prog3210_final.SignUpActivity"
    android:background="@color/colorBackgroundB">

    <TextView
        android:id="@+id/lblSignUp"
        style="@style/CenteredLblHeader"
        android:text="@string/lblSignUpHeader" />

    <LinearLayout
        android:id="@+id/centeredLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSignUp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <!-- First name input -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblFirstName"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtFirstName"
                android:text="@string/lblFirstName" />

            <EditText
                android:id="@+id/txtFirstName"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblFirstName" />
        </RelativeLayout>

        <!-- Last name input -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblLastName"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtLastName"
                android:text="@string/lblLastName" />

            <EditText
                android:id="@+id/txtLastName"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblLastName" />
        </RelativeLayout>

        <!-- Email input -->'
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblEmail"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtEmail"
                android:text="@string/lblEmail" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblEmail"
                android:inputType="textEmailAddress" />
        </RelativeLayout>

        <!-- Password input -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblPassword"
                style="@style/FloatingLbl"
                android:layout_alignLeft="@+id/txtPassword"
                android:text="@string/lblPassword" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/CenteredInput"
                android:layout_below="@+id/lblPassword"
                android:inputType="textPassword" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lblErrorMessage"
        style="@style/ErrorUnderInput"
        android:layout_below="@+id/centeredLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/CenteredButton"
        android:layout_below="@+id/lblErrorMessage"
        android:layout_marginTop="20dp"
        android:text="@string/btnSignUp" />

</RelativeLayout>
