<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cdickie2309.prog3210_final.ForgotPasswordActivity"
    android:background="@color/colorBackgroundB">

        <TextView
            android:id="@+id/lblForgotPasswordHeader"
            style="@style/CenteredLblHeader"
            android:text="@string/lblForgotPasswordHeader"/>

        <LinearLayout
            android:id="@+id/centeredLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblForgotPasswordHeader"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

                <!-- Email input -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lblEmail"
                            style="@style/FloatingLbl"
                            android:layout_alignLeft="@+id/txtEmail"
                            android:text="@string/lblEmail" />

                        <EditText
                            android:id="@+id/txtEmail"
                            style="@style/CenteredInput"
                            android:layout_below="@+id/lblEmail"
                            android:inputType="textEmailAddress" />
                </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnReset"
            style="@style/CenteredButton"
            android:layout_below="@+id/centeredLayout"
            android:layout_marginTop="20dp"
            android:text="@string/btnReset" />

</RelativeLayout>
